--- a/GTAV SnapmaticConverter.vcxproj
+++ b/GTAV SnapmaticConverter.vcxproj
@@ -139,7 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GTAV PictureRecover.cpp" />
+    <ClCompile Include="GTAV SnapmaticConverter.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
